Attempted to add post request in js file

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <head>
 	<title>Flask Tutorial!</title>
-	<script src="static/base.js"></script>
+	<script src="static/base.js" defer></script>
 	<link href="static/base.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>Server status: <span id="status" class="down">{{server_status}}</span></h1>
+	<input id="GetStatusButton" type="button" value="test"/>
 </body>
